# real_time_sentiment_analysis

./: .gitignore  Makefile  README.md  project_architecture  pyproject.toml  requirements.txt  workflow
code/: dataflow_main.py  pubsub_publisher.py
tests/: test_pipeline.py
